<resources>
    <string name="Statistics">Statistics</string>
    <string name="_5_sec">+ 5 SEC</string>
    <string name="action_settings">Settings</string>
    <string name="am">AM</string>
    <string name="app_name">Butt &amp; Legs Pro</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back_dialog_content">Progress will be lost</string>
    <string name="back_dialog_negative">Cancel</string>
    <string name="back_dialog_positive">Ok</string>
    <string name="back_dialog_title">Are You Sure?</string>
    <string name="back_walks_with_incline">Back Walks with Incline</string>
    <string name="back_walks_with_leg_raise_with_incline">Back Walks with Leg Raise with Incline</string>
    <string name="begin_workout">begin workout</string>
    <string name="beginer_desc">Exercise 2 days - 1 day rest</string>
    <string name="beginner">Beginner</string>
    <string name="booty_push">Booty Push</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bridge_with_leg_raise_left">Bridge with Leg Raise Left</string>
    <string name="bridge_with_leg_raise_right">Bridge with Leg Raise Right</string>
    <string name="bridges">Bridges</string>
    <string name="butt_lift">Butt Lift</string>
    <string name="card_desc" formatted="false">%s Intensity / %s min</string>
    <string name="challange_30_days">30 Days Challenge</string>
    <string name="challenge">30 Days</string>
    <string name="chose_level">Choose your level</string>
    <string name="com.crashlytics.android.build_id">0b04f4f7-3c18-41f2-a9f3-4be523310576</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="communicate">Communicate</string>
    <string name="crossover_with_leg_raise">Crossover with Leg Raise</string>
    <string name="crossover_with_squad">Crossover with Squad</string>
    <string name="crossover_with_squads_with_incline">Crossover with Squads with Incline</string>
    <string name="custom_workout">I am trainer</string>
    <string name="custom_workout_max">Maximum is %1$d exercises</string>
    <string name="custom_workout_min">Minimum is %1$d exercises</string>
    <string name="day">Day</string>
    <string name="days">days</string>
    <string name="default_web_client_id">850824620765-8lgbnmboq3r6h5vnroi9k2hvfcnkntbg.apps.googleusercontent.com</string>
    <string name="dialog_long_rest">Very long rest not effective</string>
    <string name="did_it">Awesome! You did it!</string>
    <string name="do_it_now">do it now</string>
    <string name="donkey_downs">Donkey Downs</string>
    <string name="donkey_kick">Donkey Kick</string>
    <string name="donkey_kick_left">Donkey Kick left</string>
    <string name="donkey_kick_right">Donkey Kick right</string>
    <string name="drag_drop_text">Press hold! Drag and drop to order</string>
    <string name="duration">Duration</string>
    <string name="feedback">Send feedback</string>
    <string name="female">female</string>
    <string name="finish">FINISH</string>
    <string name="firebase_database_url">https://fityplank.firebaseio.com</string>
    <string name="forward_lunge">Forward Lunge</string>
    <string name="forward_lunge_left">Forward Lunge left</string>
    <string name="forward_lunge_right">Forward Lunge right</string>
    <string name="frozen_squat">Frozen Squat</string>
    <string name="gcm_defaultSenderId">850824620765</string>
    <string name="get_stronger">Be Stronger</string>
    <string name="give_5">Give 5</string>
    <string name="give_5_title">Please help us and give 5</string>
    <string name="go">Go</string>
    <string name="google_api_key">AIzaSyC0nOcIoHLt5FlFpzCgiJtWpJJckWfeQxI</string>
    <string name="google_app_id">1:850824620765:android:eae2d7a9328151ba</string>
    <string name="google_crash_reporting_api_key">AIzaSyC0nOcIoHLt5FlFpzCgiJtWpJJckWfeQxI</string>
    <string name="google_storage_bucket">fityplank.appspot.com</string>
    <string name="gravity_feet">Gravity Feet</string>
    <string name="high_intensivity">High</string>
    <string name="high_knees">High Knees</string>
    <string name="high_knees_left">High Knees left</string>
    <string name="high_knees_right">High Knees right</string>
    <string name="home">Home</string>
    <string name="hours">hrs</string>
    <string name="in_app_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAmyy4J7uuPeL+XhDY0olT40WtZtXjdFC3sHglNqEm9t5mDFL+7UJvmjR6mRtcDxc7Ze6w6qOXncxJMdJEx74sNQ8RrV2UdG0mbs5vS/dHAzAqvmqTr1CIKNTeGZro466hKxmkOFbz13LFwNoGrhrDG/odT7hYY/m6cqAkDBarvotvEMUUbwCtt4dI7c6qrp8zskArrIr71gYSKBXzE7rRhZZV/MtCma64cy+6q7/kHmC8oXMwFadt8gnmCzDF/jaZ1INS5dRZPwfWO8lN9TeiaSTma5LR8HrEgB5JmfiHAEY/VbpSNx29Rh+geLZfUCdASNIV9e4jFSv92+ErA3ZwTwIDAQAB</string>
    <string name="in_app_retry">Please retry in a few seconds.</string>
    <string name="issue_with_purchase">You have issues with Google Play</string>
    <string name="jump_rope">Jump Rope</string>
    <string name="jump_squat">Jump Squat</string>
    <string name="jump_squats_in_a_low_speed">Jump Squats in a Low Speed</string>
    <string name="jumping_jacks">Jumping Jacks</string>
    <string name="jumping_squats">Jumping Squats</string>
    <string name="jumps">Jumps</string>
    <string name="kg">kg</string>
    <string name="kickbacks_left_leg">Kickbacks Left Leg</string>
    <string name="kickbacks_right_leg">Kickbacks Right Leg</string>
    <string name="label_current">Current</string>
    <string name="label_no_voice">No voice</string>
    <string name="label_or">or</string>
    <string name="label_today">Today</string>
    <string name="label_workout">Workout Plans</string>
    <string name="launch_begin">begin workout</string>
    <string name="launch_title">WELCOME TO THE Butt and Legs Pro</string>
    <string name="launch_title2">lets get start</string>
    <string name="lb">lb</string>
    <string name="legs_back">Legs Back</string>
    <string name="legs_back_left">Legs Back left</string>
    <string name="legs_back_right">Legs Back right</string>
    <string name="legs_lift">Legs Lift</string>
    <string name="legs_raise">Legs Raise</string>
    <string name="legs_raise_left">Legs Raise left</string>
    <string name="legs_raise_right">Legs Raise right</string>
    <string name="legs_up">Legs Up</string>
    <string name="level">Level</string>
    <string name="level_unlocked">Level unlocked</string>
    <string name="look_at_your_toes">Look at Your Toes</string>
    <string name="lose_weight">Hard Workout</string>
    <string name="low_walks">Low Walks</string>
    <string name="low_walks_with_incline">Low Walks With Incline</string>
    <string name="low_walks_with_leg_raise">Low Walks with Leg Raise</string>
    <string name="main_top_desc">Are you ready to rock</string>
    <string name="main_top_title">Hello!</string>
    <string name="male">male</string>
    <string name="md_back_label">Back</string>
    <string name="md_cancel_label">Cancel</string>
    <string name="md_choose_label">Choose</string>
    <string name="md_custom_label">Custom</string>
    <string name="md_done_label">Done</string>
    <string name="md_error_label">Error</string>
    <string name="md_presets_label">Presets</string>
    <string name="md_storage_perm_error">Your app has not been granted the READ_EXTERNAL_STORAGE permission.</string>
    <string name="mdtp_am">am</string>
    <string name="mdtp_cancel">@android:string/cancel</string>
    <string name="mdtp_date">Date</string>
    <string name="mdtp_date_v1_monthyear">MMMM yyyy</string>
    <string name="mdtp_date_v2_daymonthyear">EEE, MMM dd</string>
    <string name="mdtp_day_of_week_label_typeface">sans-serif</string>
    <string name="mdtp_day_picker_description">Month grid of days</string>
    <string name="mdtp_deleted_key">%1$s deleted</string>
    <string name="mdtp_done_label">Done</string>
    <string name="mdtp_hour_picker_description">Hours circular slider</string>
    <string name="mdtp_item_is_selected">%1$s selected</string>
    <string name="mdtp_minute_picker_description">Minutes circular slider</string>
    <string name="mdtp_ok">@android:string/ok</string>
    <string name="mdtp_pm">pm</string>
    <string name="mdtp_radial_numbers_typeface">sans-serif</string>
    <string name="mdtp_sans_serif">sans-serif</string>
    <string name="mdtp_second_picker_description">Seconds circular slider</string>
    <string name="mdtp_select_day">Select month and day</string>
    <string name="mdtp_select_hours">Select hours</string>
    <string name="mdtp_select_minutes">Select minutes</string>
    <string name="mdtp_select_seconds">Select seconds</string>
    <string name="mdtp_select_year">Select year</string>
    <string name="mdtp_time">Time</string>
    <string name="mdtp_time_placeholder">00</string>
    <string name="mdtp_time_separator">:</string>
    <string name="mdtp_year_picker_description">Year list</string>
    <string name="medium">Medium</string>
    <string name="medium_desc">Exercise 4 days - 1 day rest</string>
    <string name="menu_help_to_perfect_the_app">Help to perfect the app</string>
    <string name="menu_insta">Get Motivated</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_remove_ads">remove ads</string>
    <string name="personal">Personal</string>
    <string name="profi">Professional</string>
    <string name="profi_dec">Exercise 5 days - 1 day rest</string>
    <string name="reminders">Reminders</string>
    <string name="setting">Settings</string>
    <string name="setting_ready_duration">Ready duration</string>
    <string name="setting_rest_duration">Rest duration</string>
    <string name="settings_cd_voice_start">Countdown voice start</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_week_start">Week start</string>
    <string name="share">Share</string>
    <string name="treadmill">Treadmill</string>
    <string name="unlock_current">Unlock this level free</string>
    <string name="unlock_now">Unlock now</string>
    <string name="weight">Weight</string>
    <string name="weight_statistics">Weight</string>
</resources>