<?xml version="1.0" encoding="utf-8"?>
<menu>
    <group>
        <item n1:icon="@drawable/ic_menu_manage" n1:id="@+id/nav_manage" n1:title="@string/setting"
          xmlns:n1="http://schemas.android.com/apk/res/android" />
        <item n2:icon="@drawable/ic_watch_later_black_24dp" n2:id="@+id/nav_reminder" n2:title="@string/reminders"
          xmlns:n2="http://schemas.android.com/apk/res/android" />
        <item n3:icon="@drawable/ic_stats" n3:id="@+id/nav_weight" n3:title="@string/weight_statistics"
          xmlns:n3="http://schemas.android.com/apk/res/android" />
    </group>
    <item n4:title="@string/communicate"
      xmlns:n4="http://schemas.android.com/apk/res/android">
        <menu>
            <item n4:icon="@drawable/ic_menu_share" n4:id="@+id/nav_share" n4:title="@string/share" />
            <item n4:icon="@drawable/ic_rate" n4:id="@+id/nav_rate" n4:title="@string/menu_rate" />
            <item n4:icon="@drawable/ic_insta" n4:id="@+id/nav_insta" n4:title="@string/menu_insta" />
        </menu>
    </item>
</menu>